Changed colour, and fixed bug where Fractal would crash due to bad unwraps
In room.rs, I used two unwraps without any checking for None. I modified the code to use a continue statement in that case now

--- a/fractal-gtk/res/app.css
+++ b/fractal-gtk/res/app.css
@@ -314,4 +314,6 @@ stack.titlebar:not(headerbar) > box > separator {
 .typing_label {
 	margin: 6px;
 	margin-left: 78px;
+	margin-bottom: 8px;
+    color: @theme_selected_bg_color;
 }
